@@ -418,7 +418,7 @@ void parse_cmdline(int argc, char **argv)
             if(optopt == '?') h_flag = 1;
             break;
         default:
-            printf("?? getopt returned character code 0%o ??\n", c);
+            fprintf(stderr,"?? getopt returned character code 0%o ??\n", c);
         }
     }
     
@@ -434,7 +434,7 @@ void parse_cmdline(int argc, char **argv)
                 if(argv[optind][1] == ':'){
                     ch = argv[optind][0];
                     if(letter_index > (MAX_DOS_DRIVES - 1)){
-                        printf("Too many letters specified on the command line.\n");
+                        fprintf(stderr,"Too many letters specified on the command line.\n");
                     } else {
                         letters[letter_index] = ch;
                         letter_index ++;
@@ -542,7 +542,7 @@ void search_for_paths(void)
                 WgxDbgPrintLastError("search_for_paths: GetLongPathNameW failed");
                 goto use_short_path;
             } else if(result > MAX_LONG_PATH + 1){
-                printf("search_for_paths: long path of \'%ls\' is too long!",xargv[i]);
+                fprintf(stderr,"search_for_paths: long path of \'%ls\' is too long!",xargv[i]);
                 goto use_short_path;
             }
         } else {
@@ -556,7 +556,7 @@ use_short_path:
             WgxDbgPrintLastError("search_for_paths: GetFullPathNameW failed");
             wcscpy(full_path,long_path);
         } else if(result > MAX_LONG_PATH + 1){
-            printf("search_for_paths: full path of \'%ls\' is too long!",long_path);
+            fprintf(stderr,"search_for_paths: full path of \'%ls\' is too long!",long_path);
             wcscpy(full_path,long_path);
         }
         full_path[MAX_LONG_PATH] = 0;
