@@ -429,7 +429,7 @@ void parse_cmdline(int argc, char **argv)
             if(optopt == '?') h_flag = 1;
             break;
         default:
-            printf("?? getopt returned character code 0%o ??\n", c);
+            fprintf(stderr,"?? getopt returned character code 0%o ??\n", c);
         }
     }
     
@@ -445,7 +445,7 @@ void parse_cmdline(int argc, char **argv)
                 if(argv[optind][1] == ':'){
                     ch = argv[optind][0];
                     if(letter_index > (MAX_DOS_DRIVES - 1)){
-                        printf("Too many letters specified on the command line.\n");
+                        fprintf(stderr,"Too many letters specified on the command line.\n");
                     } else {
                         letters[letter_index] = ch;
                         letter_index ++;
@@ -540,7 +540,7 @@ void search_for_paths(void)
             WgxDbgPrintLastError("search_for_paths: GetLongPathNameW failed");
             wcsncpy(long_path,xargv[i],MAX_LONG_PATH);
         } else if(result > MAX_LONG_PATH + 1){
-            printf("search_for_paths: long path of \'%ls\' is too long!",xargv[i]);
+            fprintf(stderr,"search_for_paths: long path of \'%ls\' is too long!",xargv[i]);
             wcsncpy(long_path,xargv[i],MAX_LONG_PATH);
         }
         long_path[MAX_LONG_PATH] = 0;
@@ -550,7 +550,7 @@ void search_for_paths(void)
             WgxDbgPrintLastError("search_for_paths: GetFullPathNameW failed");
             wcscpy(full_path,long_path);
         } else if(result > MAX_LONG_PATH + 1){
-            printf("search_for_paths: full path of \'%ls\' is too long!",long_path);
+            fprintf(stderr,"search_for_paths: full path of \'%ls\' is too long!",long_path);
             wcscpy(full_path,long_path);
         }
         full_path[MAX_LONG_PATH] = 0;
